[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "vulp"
readme = "README.md"
authors = [
    {name = "Stéphane Caron", email = "stephane.caron@normalesup.org"},
]
maintainers = [
    {name = "Stéphane Caron", email = "stephane.caron@normalesup.org"},
]
dynamic = ['version', 'description']
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Robot Framework :: Library",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "msgpack >=1.0.2",
    "posix_ipc >=1.1.1",
]
keywords = ["motion control", "real time", "robotics"]

[project.urls]
Documentation = "https://tasts-robots.org/doc/vulp/"
Source = "https://github.com/tasts-robots/vulp"
Tracker = "https://github.com/tasts-robots/vulp/issues"
Changelog = "https://github.com/tasts-robots/vulp/blob/main/CHANGELOG.md"

[tool.flit.module]
# name = "spine"

[tool.flit.sdist]
include = [
    "vulp/spine/*.py",
    "vulp/utils/*.py",
]
